--- a/src/styles/blogPost.css
+++ b/src/styles/blogPost.css
@@ -1,6 +1,3 @@
-/* blogPost.css */
-
-
 .overall-container {
   display: flex;
   justify-content: center;
@@ -71,6 +68,31 @@
   margin: auto;
   padding: 20px;
 }
+
+.blog-content h1 {
+  font-size: 2.5em;
+}
+
+.blog-content h2 {
+  font-size: 2.2em;
+}
+
+.blog-content h3 {
+  font-size: 1.9em;
+}
+
+.blog-content h4 {
+  font-size: 1.7em;
+}
+
+.blog-content h5 {
+  font-size: 1.5em;
+}
+
+.blog-content h6 {
+  font-size: 1.3em;
+}
+
 
 .katex {
   font-size: 1.25em;
@@ -172,16 +194,11 @@
 
 .blog-content details {
   background-color: #f0f0f0;
-  /* Keeps the desired grey-ish background */
   padding: 10px;
   margin-bottom: 20px;
-  /* Space below the block */
   border-radius: 10px;
-  /* Rounded corners */
   overflow: hidden;
-  /* Ensures content transitions smoothly */
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
-  /* Adds a shadow */
 }
 
 .blog-content blockquote {
@@ -198,7 +215,7 @@
 }
 
 .blog-content blockquote p:first-child {
-  margin-top: 0;
+  margin-top: 0.5em;
 }
 
 .blog-content blockquote p:last-child {
@@ -224,6 +241,17 @@
   border-left: 5px solid #31dd2e;
 }
 
+/* Proof */
+.blog-content blockquote.proof::before {
+  color: #31dd2e;
+  content: "Proof";
+}
+
+.blog-content blockquote.proof {
+  background: rgba(174, 247, 126, 0.2);
+  border-left: 5px solid #31dd2e;
+}
+
 /* Equation */
 .blog-content blockquote.equation::before {
   color: #486bd5;
@@ -234,6 +262,20 @@
   background: rgba(126, 174, 247, 0.2);
   border-left: 5px solid #486bd5;
 }
+
+
+/* Theorem */
+.blog-content blockquote.theorem::before {
+  color: #486bd5;
+  content: "Theorem";
+}
+
+.blog-content blockquote.theorem {
+  background: rgba(126, 174, 247, 0.2);
+  border-left: 5px solid #486bd5;
+}
+
+
 
 /* Important */
 .blog-content blockquote.important::before {
@@ -246,7 +288,27 @@
   border-left: 5px solid #dd2e2e;
 }
 
+/* Example */
+.blog-content blockquote.example::before {
+  color: #555555;
+  content: "Example";
+}
 
+.blog-content blockquote.example {
+  background: #f0f0f0;
+  border-left: 5px solid #555555;
+}
+
+
+body.dark-mode .blog-content blockquote.example::before {
+  color: #cfcdcd;
+  content: "Example";
+}
+
+body.dark-mode .blog-content blockquote.example {
+  background: #444;
+  border-left: 5px solid #cfcdcd;
+}
 
 
 
@@ -295,7 +357,7 @@ body.dark-mode .caption {
   color: #fff;
 }
 
-body.dark-mode .blogPostHeading {
+body.dark-mode .note-postHeading {
   color: #E4E7EB;
 }
 
@@ -315,7 +377,7 @@ body.dark-mode .blog-content th {
   background-color: hsla(0, 0%, 93%, .2);
 }
 
-.blog-content code:not([class]):not(.sc-guDLey code) {
+.blog-content code:not([class]):not(.code-blocks code) {
   padding: .2em .4em;
   margin: 0;
   font-size: 85%;
@@ -325,7 +387,7 @@ body.dark-mode .blog-content th {
   color: black;
 }
 
-body.dark-mode .blog-content code:not([class]):not(.sc-guDLey code) {
+body.dark-mode .blog-content code:not([class]):not(.code-blocks code) {
   padding: .2em .4em;
   margin: 0;
   font-size: 85%;
@@ -338,4 +400,10 @@ body.dark-mode .blog-content code:not([class]):not(.sc-guDLey code) {
 body.dark-mode .blog-content .tikz-drawing svg {
   -webkit-filter: invert(100%);
   filter: invert(100%);
+}
+
+.blog-content .tikz-drawing svg {
+  max-width: 100%;
+  width: 500px;
+  margin: 20px auto;
 }
